# tasks

./: Cargo.toml  Makefile  README.md  build_deb.sh  build_macos.sh  build_rpm.sh  build_windows.sh  config.toml.example  module.toml
.github/workflows/: build.yml  dist.yml
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: BoardEditWindow.tsx  CommentBody.tsx  CommentEditor.tsx  CommentThread.tsx  TaskCard.tsx  TaskCreateDialog.tsx  TaskDetailPanel.tsx  TasksApp.tsx  TasksCalDavSettings.tsx  TasksCreateMenu.tsx  TasksDataCard.tsx  TasksDueWidget.tsx  TasksFilterPanel.tsx  TasksKanbanBoard.tsx  TasksListView.tsx  TasksMiniPanel.tsx  TasksSettingsPage.tsx  TasksSidebarBody.tsx  TasksToolbar.tsx  UserPicker.tsx  api.ts  entry.ts  hashRoute.ts  helpers.ts  i18n.ts  kubunoData.ts  store.ts  taskCreateStore.ts  taskMenu.ts  theme.css  useSwipe.ts
migrations/: 000001_tasks_schema.down.sql  000001_tasks_schema.up.sql  000002_tasks_default_board.down.sql  000002_tasks_default_board.up.sql  000003_task_color.down.sql  000003_task_color.up.sql  000004_board_comments.down.sql  000004_board_comments.up.sql  000005_tasks_delta.down.sql  000005_tasks_delta.up.sql
src/: lib.rs  main.rs  state.rs
src/config/: settings.rs
src/errors/: mod.rs
src/events/: publisher.rs
src/handlers/: attachments.rs  boards.rs  comments.rs  delta.rs  health.rs  import_export.rs  labels.rs  mod.rs  stacks.rs  tasks.rs
src/handlers/caldav/: mod.rs
src/middleware/: mod.rs
src/models/: attachment.rs  board.rs  comment.rs  label.rs  mod.rs  stack.rs  task.rs
src/router/: mod.rs
src/services/: attachment_service.rs  board_comment_service.rs  board_service.rs  comment_service.rs  icalendar_service.rs  label_service.rs  mod.rs  reminder_service.rs  stack_service.rs  task_service.rs
